using UnityEngine;

namespace Sample.Visitor.Sample1
{
    public class Clerk : Employee
    {
        public Clerk()
            : base("Hank", 25000.0, 14)
        {
        }
    }
}