using UnityEngine;

namespace Sample.Visitor.Sample1
{
    public class President : Employee
    {
        public President()
            : base("Dick", 45000.0, 21)
        {
        }
    }
}